# iy5sw_DS5111su24_lab_01

./: .gitignore  NOTES.md  README.md  get_the  get_the_books  get_the_books.sh  makefile  pyproject.toml  requirements.txt  text_tokenizer.py
.github/workflows/: validations.yml
src/iy5sw/: __init__.py  text_tokenizer.py
tests/: test_clean_text.py  test_tokenizer.py  test_versioning.py  test_word_counter.py
