[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iy5sw"
version = "0.0.2"
authors = [
  { name="Iman Yousfi", email="iy5sw@virginia.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/imanyousfi/iy5sw_DS5111su24_lab_01/"
